# POO_Chess-game

./: CMakeLists.txt  main.cpp
modules/App/: app.cpp  app.h  mainmenu.cpp  play.cpp  settings.cpp
modules/History/: history.cpp  history.h
modules/Pieces/: piece.cpp  piece.h
modules/ResourceManager/: resource_manager.cpp  resource_manager.h
modules/board/: gameboard.cpp  gameboard.h
